--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
     "mongoose": "^8.1.0",
+    "nodemailer": "^6.9.9",
+    "nodemailer-express-handlebars": "^6.1.2",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
   }
