--- a/package.json
+++ b/package.json
@@ -11,5 +11,16 @@
     "nodemailer-express-handlebars": "^6.1.2",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
-  }
+  },
+  "name": "projetonode",
+  "description": "Este é um aplicativo simples de blog desenvolvido com Node.js, Express e MongoDB.",
+  "version": "1.0.0",
+  "main": "app.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
+  },
+  "author": "",
+  "license": "ISC"
 }
